tests/spec/non_conformant/errors/import/file/test_loop/test_while.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/loop/while.hrx"

// Ignoring "test", error tests are not supported yet.
